Scenario-1/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.exmaple.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-app
          servicePort: 8080
